feat: initial page

--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -28,7 +28,8 @@
         // we want to avoid extraneous spaces
         "no-multi-spaces": ["error"],
         "no-unused-vars": ["error"],
-        "no-unused-labels": ["error"]
-        
+        "no-unused-labels": ["error"],
+        "@typescript-eslint/no-var-requires" : 0,
+        "@typescript-eslint/no-explicit-any": 0
     }
 }
