--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "SET PORT=3001 && react-scripts start",
+    "start": "export PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -36,14 +36,17 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/query-string": "^6.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "css-loader": "^6.6.0",
+    "typescript-plugin-css-modules": "^3.4.0",
+    "typings-for-css-modules-loader": "^1.7.0"
   }
 }
