--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,5 +1,18 @@
 {
   "compilerOptions": {
+    "plugins": [
+      { 
+        "name": "typescript-plugin-css-modules",
+        "options": {
+          "classnameTransform": "dashes",
+          "customMatcher": "\\.m\\.css$",
+          "customRenderer": "./myRenderer.js",
+          "dotenvOptions": {},
+          "postcssOptions": {},
+          "rendererOptions": {}
+        }
+      }
+      ],
     "target": "es5",
     "lib": [
       "dom",
